Correct container overlap issue

--- a/main.css
+++ b/main.css
@@ -211,11 +211,11 @@ section:last-child {
 }
 
 #attribution {
-    display: flex;
-    width: 100%;
     border-top: 1px dashed #7FFF00;
-    height: 2em;
-    align-items: center;
-    justify-content: center;
-    border-bottom: solid 1px #7FFF00;
+    padding: 1em 0;
+    text-align: justify;
+    /* height: 2em; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* border-bottom: solid 1px #7FFF00; */
 }
